# k8s-manifests

./: .gitignore  CLAUDE.md  README.md  ai-ml-appset.yaml  app.yaml  argocd-secret.yaml  argocd-test-secret.yaml  atd-overlays.yaml  media-appset.yaml  media-dev-appset.yaml  media-prod-appset.yaml  media-stg-appset.yaml  observability-appset.yaml  orchestration-appset.yaml  pgsql-appset.yaml  readme.md
ai-ml/: ai-ml-appset.yaml  ai-ml-cici-appset.yaml  ai-ml-dev-appset.yaml  ai-ml-prod-appset.yaml  ai-ml-stg-appset.yaml
argo-cd-config/: applicationset-controller.yaml
atd/: app.yaml
atd-dev/: app.yaml  deployment.yaml  service.yaml
atd-dev-app/: deployment.yaml
atd-stg/: app.yaml  deployment.yaml
atd-stg-app/: service.yaml
automatic-transmission-daemon/: app.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  kustomization.yml  mainfest.yaml  pv.yaml  pvc.yaml  service.yaml
experiments/: experiments-appset.yaml  experiments-dev-appset.yaml  experiments-prod-appset.yaml
experiments/osrm/: README.md  docker-compose.customize.yml  docker-compose.extract.yml  docker-compose.partition.yml  docker-compose.server.yml  k8s-deployment.yaml  main.py  osrm-appset.yaml  pyproject.toml  service.yaml
experiments/osrm/src/core/: download_osm.py  process.py  transfer.py
experiments/osrm/src/utils/: s3_utils.py
experiments/osrm/tests/: test_osrm_endpoints.sh  test_s3_connectivity.py  test_s3_utils.py
gitlab/: gitlab-appset.yaml
kubeflow/: app.yaml  configmap.yaml  kustomization.yaml  rbac.yaml
media/: center-console-appset.yaml  media-dev-appset.yaml  (+3 more)
(+378 files in other folders)
